plugins {
    id 'java'
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.21'
    id 'com.gradleup.shadow' version '9.4.2'
    // Provides RunServer tasks (paperweight-userdev exposes no runServer task);
    // used by the soak harness (scripts/soak.sh SOAK_PLATFORM=paper).
    id 'xyz.jpenilla.run-paper' version '3.0.2'
}

version = project.mod_version
group = project.maven_group

repositories {
    mavenCentral()
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies {
    implementation project(':common')
    paperweight.paperDevBundle('1.20.1-R0.1-SNAPSHOT')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testImplementation 'org.mockito:mockito-core:5.20.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// 1.20.1 backport: production Paper 1.20.1 is spigot-mapped at runtime — make the
// reobfuscated jar the production artifact (dev bundle server stays mojang-mapped).
// Must come after the paperweight.paperDevBundle(...) dependency declaration.
paperweight.reobfArtifactConfiguration =
        io.papermc.paperweight.userdev.ReobfArtifactConfiguration.getREOBF_PRODUCTION()

test {
    useJUnitPlatform()
}

processResources {
    inputs.property "version", project.version
    filesMatching("plugin.yml") {
        expand "version": project.version
    }
}

shadowJar {
    // 1.20.1 backport: the mojang-mapped shadow jar is a DEV artifact now (the reobf'd jar
    // is the release); keep its base name outside the release/CI glob
    // (lod-server-support-paper-*.jar) so it can never be published (soak-jar precedent).
    archiveBaseName = 'lss-paper-mojang-dev'
    archiveClassifier = ''
    // CI builds carry the full version in the filename (lod-server-support-paper-0.5.0+1.20.1.jar);
    // local dev builds keep the stable unversioned name (mirrors fabric/build.gradle).
    archiveVersion = providers.environmentVariable('CI').map { it == 'true' }.getOrElse(false)
            ? "${project.mod_version}+${project.minecraft_version}" : ''
    configurations = [project.configurations.runtimeClasspath]
    exclude 'org/slf4j/**'
    exclude 'META-INF/maven/org.slf4j/**'

    // The soak harness is a dev-only tool (-Dlss.soak.scenario); keep it out of release
    // jars. PaperSoakBridge no-ops when the classes are absent (mirrors fabric/build.gradle's
    // benchmark exclusion); runSoakServer uses soakShadowJar below, which retains them.
    exclude 'dev/vox/lss/paper/soak/**'

    from(rootProject.file("LICENSE")) {
        rename { "${it}_lod-server-support-paper" }
    }
}

// Dev-only variant of the plugin jar that keeps the soak package; consumed exclusively
// by runSoakServer (scripts/soak.sh SOAK_PLATFORM=paper), which references it via the
// task output, never by filename. Never published — the base name is deliberately
// outside the release/CI glob (lod-server-support-paper-*.jar) so a stale soak jar in
// build/libs can never be attached to a GitHub release or pushed to Modrinth.
def soakShadowJar = tasks.register('soakShadowJar',
        com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
    archiveBaseName = 'lss-paper-soak'
    archiveClassifier = ''
    archiveVersion = ''
    from sourceSets.main.output
    configurations = [project.configurations.runtimeClasspath]
    exclude 'org/slf4j/**'
    exclude 'META-INF/maven/org.slf4j/**'
    // paperweight stamps 'paperweight-mappings-namespace: mojang' on the jar task; without
    // it Paper assumes spigot mappings and remaps (= corrupts) this mojang-mapped jar.
    manifest.inheritFrom(tasks.jar.manifest)
}

// The reobf'd jar IS the release artifact on 1.20.1 — give it the release naming
// (shadowJar was auto-reclassified to -dev-all by REOBF_PRODUCTION, so no collision).
tasks.named('reobfJar', io.papermc.paperweight.tasks.RemapJar) {
    def ci = providers.environmentVariable('CI').map { it == 'true' }.getOrElse(false)
    outputJar.set(layout.buildDirectory.file(ci
            ? "libs/lod-server-support-paper-${project.mod_version}+${project.minecraft_version}.jar"
            : 'libs/lod-server-support-paper.jar'))
}
tasks.named('assemble') { dependsOn 'reobfJar' }

// 1.20.1 backport: Paper's RUNTIME is spigot-mapped below 1.20.5, so any jar a real
// Paper/Folia 1.20.1 server loads must be reobfuscated. paperweight-userdev auto-wires
// :paper:reobfJar to consume shadowJar when the shadow plugin is applied; the soak jar
// needs its own RemapJar twin sharing reobfJar's mappings/remapper wiring.
def soakReobfJar = tasks.register('soakReobfJar', io.papermc.paperweight.tasks.RemapJar) {
    def reobf = tasks.named('reobfJar', io.papermc.paperweight.tasks.RemapJar).get()
    inputJar.set(soakShadowJar.flatMap { it.archiveFile })
    outputJar.set(layout.buildDirectory.file('libs/lss-paper-soak-reobf.jar'))
    mappingsFile.set(reobf.mappingsFile)
    remapClasspath.setFrom(reobf.remapClasspath)
    remapper.setFrom(reobf.remapper)
    remapperArgs.set(reobf.remapperArgs)
    fromNamespace.set(reobf.fromNamespace)
    toNamespace.set(reobf.toNamespace)
}

// Soak harness run (scripts/soak.sh) — same gate/property plumbing as fabric's soakServer
// loom run. The orchestrator stages world/config/server.properties/eula into the run dir
// before launching; RunServer itself supplies --nogui and disables the watchdog.
tasks.register('runSoakServer', xyz.jpenilla.runpaper.task.RunServer) {
    minecraftVersion(project.minecraft_version)
    runDirectory(file('build/run/soak-server'))
    pluginJars(soakReobfJar.flatMap { it.outputJar })
    systemProperty 'lss.soak.scenario', findProperty('soak.scenario') ?: ''
    maxHeapSize = '2G'
}

// Folia soak twin (scripts/soak.sh SOAK_PLATFORM=folia). run-paper's opt-in Folia task
// (named runFolia) downloads folia-<mc>-<build>.jar from the PaperMC downloads service; we
// point it at the same soakShadowJar + scenario plumbing as runSoakServer. It can double as
// a manual Folia smoke task — without -Psoak.scenario the driver stays inert (empty
// property) — but it REUSES the soak staging dir: accept the EULA by hand on a fresh
// checkout, and expect whatever server.properties/lss-server-config.json/bukkit.yml the
// last soak scenario staged there (offline-mode superflat + 5s autosave) to apply.
// pluginsMode INHERIT_NONE is load-bearing: the default PLUGIN_JAR_DETECTION auto-adds the
// RELEASE shadowJar (soak-excluded) next to soakShadowJar — two same-named plugins, and
// whichever loads first wins nondeterministically.
runPaper.folia.pluginsMode = xyz.jpenilla.runpaper.RunPaperExtension.Folia.PluginsMode.INHERIT_NONE
runPaper.folia.registerTask {
    minecraftVersion(project.minecraft_version)
    runDirectory(file('build/run/folia-soak-server'))
    pluginJars(soakReobfJar.flatMap { it.outputJar })
    systemProperty 'lss.soak.scenario', findProperty('soak.scenario') ?: ''
    maxHeapSize = '2G'
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

